--- a/.gitattributes
+++ b/.gitattributes
@@ -1,14 +1,3 @@
-# Source files
-# ============
-*.Rdata binary
-*.RData binary
-*.rda   binary
-*.rdb   binary
-*.rds   binary
-*.Rd    text
-*.Rdx   binary
-*.Rmd	  text
-*.R  	  text
-*.Rproj text
-*.Rmd   linguist-language=R
 * text=auto
+*.Rmd linguist-language=R
+*.nb.html linguist-vendored
